# website

./: .gitignore  LICENSE  README.md  index.html  next.config.js  package-lock.json  package.json  pyproject.toml
articles/: machine-learning-calendar-management.html  why-oh-why-silly-enterprise-api.html
src/: example.py  main.py
src/app/: layout.tsx  page.tsx
src/app/blog/[slug]/: page.tsx
src/blogs/: template.mdx
src/components/: blog-list.tsx  footer.tsx  header.tsx  projects.tsx
src/data/: projects.json
src/lib/: metadata.ts
src/static/css/: terminal.css
static/css/: article.css  style.css
static/cursors/: green.cur
static/js/: main.js
